# wrf-python

./: .gitignore  .readthedocs.yml  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  chey_intel.py  osx.yml  pyproject.toml  requirements.txt  setup.py  testenv2.yml  testenv3.yml
.circleci/: conda_env.yml  config.yml
.github/workflows/: ci.yml  pypi.yaml
build_envs/: Darwin.yml  Linux.yml  Win64.yml  environment.yml  linux.yml
build_envs/platform-specific/: README.md  linux.yml  macos_arm64.yml  macos_x64.yml  windows.yml
build_scripts/: chey_intel_mkl_omp.sh  gnu_no_omp.sh  gnu_omp.sh  win_mingw_no_omp.bat  win_mingw_omp.bat  win_msvc_mingw_no_omp.bat  win_msvc_mingw_omp.bat
conda_recipe/: blah.txt  bld.bat  build.bat  build.sh  meta.yaml  meta.yaml.develop  meta.yaml.release
doc/: Makefile  make.bat
doc/source/: api.rst  basic_usage.rst  citation.rst  conf.py  contrib.rst  diagnostics.rst  faq.rst  index.rst  installation.rst  internals.rst  license.rst  new.rst  plot.rst  support.rst  tutorial.rst  workshop.rst
doc/source/_templates/: product_table.txt  subproducts.txt  wrf_class.rst
doc/source/api/: index.rst
doc/source/internal_api/: index.rst
doc/source/tutorials/: boise_2018.rst  tutorial_03_2018.rst  wrf_workshop_2018.rst  wrf_workshop_2019.rst
doc/source/user_api/: index.rst
fortran/: calc_uh.f90  cloud_fracf.f90  constants.f90  eqthecalc.f90  omp.f90  ompgen.F90  ompgen.F90.template  ripW.c  rip_cape.f90  wrfW.c  wrf_cloud_fracf.f90  wrf_constants.f90  wrf_fctt.f90  wrf_pvo.f90  wrf_pw.f90  wrf_relhl.f90  wrf_rip_phys_routines.f90  wrf_testfunc.f90  wrf_user.f90  wrf_user_dbz.f90  wrf_user_latlon_routines.f90  wrf_vinterp.f90  wrf_wind.f90  wrffortran.pyf
fortran/build_help/: omp_sizes.f90  sizes  sub_sizes.py
fortran/contrib/: readme
fortran/reference/: wrfcape.f90
hpc_install/: build-wrapt  build-wrapt.ys  build-wrf-python.ys
ncl_reference/: WRFUserARW.ncl  WRFUsersherrie.ncl  cloud_fracf.f  getvar_table.txt  jinja_context.py  product_table.txt  rcm2rgrid.f  rip_cape.f  wrfW.c  wrf_map_fix.ncl  wrf_user.f  wrf_vinterp.f
src/python/wrf/: interp.py  precip.py  util.py  uvdecorator.py  wrfext.f90  wrfext.pyf
src/wrf/: __init__.py  api.py  cache.py  cape.py  cloudfrac.py  computation.py  config.py  constants.py  coordpair.py  ctt.py  dbz.py  decorators.py  destag.py  dewpoint.py  extension.py  g_cape.py  g_cloudfrac.py  g_ctt.py  g_dbz.py  g_dewpoint.py  g_geoht.py  g_helicity.py  g_latlon.py  g_omega.py  g_precip.py  g_pressure.py  g_pw.py  g_rh.py  g_slp.py  g_temp.py  g_terrain.py  g_times.py  g_uvmet.py  g_vorticity.py  g_wind.py  geobnds.py  geoht.py  helicity.py  interp.py  interputils.py  (+26 more)
test/: cachetest.py  comp_utest.py  ctt_test.py  generator_test.py  listBug.ncl  ncl_get_var.ncl  projtest.py  test_filevars.py  test_inputs.py  test_multi_cache.py  test_omp.py  test_proj_params.py  test_units.py  utests.py  varcache.py  viewtest.py
test/ci_tests/: ci_result_file.nc  ci_test_file.nc  make_test_file.py  utests.py
test/contrib/: readme
test/ipynb/: Doc_Examples.ipynb  SLS_Example.ipynb  Test_CTT.ipynb  Test_CTT_Prod.ipynb  WRF_Workshop_Demo.ipynb  WRF_python_demo.ipynb  loop_and_fill.ipynb  nocopy_test.ipynb  reduce_files.ipynb
test/misc/: extract_one_time.py  loop_and_fill_meta.py  mocktest.py  projtest.py  quiver_test.py  reduce_file.py  snippet.py  varcache.py  viewtest.py  wps.py
test/ncl/: ncl_get_var.ncl  ncl_vertcross.ncl  refl10_cross.ncl  rotated_test.ncl  test_this.ncl  wrf_user_vertcross.ncl
test/plot_tests/: plot_all.ipynb
wrf_open/: setup.py
wrf_open/ncl_reference/: calc_uh.f90  etaconv.py  wrf_cloud_topW.c  wrf_fctt.f
wrf_open/src/python/wrf/: decorators.py  extension.py  interputils.py  latlon.py  latlonutils.py  metadecorators.py  times.py
wrf_open/test/: ncl_get_var.ncl  projtest.py  test_vinterp.ncl  utests.py
wrf_open/test/ipynb/: WRF_python_demo.ipynb
wrf_open/var/: setup.py
wrf_open/var/ncl_reference/: WRFUserARW.ncl  WRF_contributed.ncl  eqthecalc.f  rcm2points.f  rcmW.c  wrf_bint3d.f  wrf_pvo.f  wrf_relhl.f  wrf_rip_phys_routines.f  wrf_user_dbz.f  wrf_user_latlon_routines.f  wrf_vinterpW.c
wrf_open/var/script/: plot2d  somplot  wrftest.py
wrf_open/var/src/python/wrf/: __init__.py
wrf_open/var/src/python/wrf/var/: __init__.py  cape.py  config.py  constants.py  ctt.py  dbz.py  decorators.py  destag.py  destagger.py  dewpoint.py  etaconv.py  extension.py  geoht.py  helicity.py  interp.py  interputils.py  latlon.py  latlonutils.py  metadecorators.py  omega.py  precip.py  pressure.py  projection.py  psadlookup.py  pw.py  rh.py  routines.py  slp.py  temp.py  terrain.py  times.py  units.py  util.py  uvdecorator.py  uvmet.py  vorticity.py  wind.py  wrfcape.f90  wrfext.f90  wrfext.pyf  (+1 more)
wrf_open/var/test/: ncl_get_var.ncl  utests.py
